# archy

./: .gitignore  .pre-commit-config.yaml  ARCHY.md  LICENSE  Makefile  README.md  arch.md  arch.sh  archy  create_design_document_pattern.md  fetch_fabric_pattern.sh  pyproject.toml  real-ai-test.md  update_arch_diagram_pattern.md
.github/: PYPI_SETUP.md  dependabot.yml
.github/workflows/: ci.yml  publish-pypi.yml
cli/: create_arch.sh  fetch_pattern.sh  setup_cli.sh  test_ai.sh  uninstall_cli.sh  update_arch.sh
patterns/: analyze_distributed_system_pattern.md  create_design_document_pattern.md  update_arch_diagram_pattern.md
scripts/: arch.sh  archy  test_ai_backend.sh
src/archy/: __init__.py  cli.py  exceptions.py
src/archy/backends/: __init__.py  base.py  cursor_agent.py  fabric.py
src/archy/core/: __init__.py  analyzer.py  config.py  git_ops.py  patterns.py
tests/: __init__.py  test_cli.py
